--- a/DSProject_Final.ipynb
+++ b/DSProject_Final.ipynb
@@ -29,11 +29,18 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Science Project - Model Training"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "Vo-463MFjdwn"
    },
    "source": [
-    "# Data loading:"
+    "## Data loading:"
    ]
   },
   {
@@ -54,7 +61,7 @@
     "id": "YYEyUQBMjr1a"
    },
    "source": [
-    "Preparing data for model training:"
+    "## Preparing data for model training:"
    ]
   },
   {
@@ -85,7 +92,7 @@
     "id": "54H3S37Okpn7"
    },
    "source": [
-    "# Feature Selection"
+    "## Feature Selection"
    ]
   },
   {
@@ -581,7 +588,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Selected Resilience Features:"
+    "### Selected Resilience Features:"
    ]
   },
   {
@@ -616,7 +623,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Selected Criminality Features:"
+    "### Selected Criminality Features:"
    ]
   },
   {
@@ -665,7 +672,7 @@
     "id": "jS3OhT32kOng"
    },
    "source": [
-    "Model testing functions:"
+    "## Model testing functions:"
    ]
   },
   {
@@ -728,7 +735,7 @@
     "id": "WUn8-dFaoB_m"
    },
    "source": [
-    "# Results:"
+    "## Results:"
    ]
   },
   {
@@ -737,7 +744,7 @@
     "id": "bQkac4zfb_13"
    },
    "source": [
-    "## Linear Regression:"
+    "### Linear Regression:"
    ]
   },
   {
@@ -824,7 +831,7 @@
     "id": "ntti7-GBcBdg"
    },
    "source": [
-    "## KNN:"
+    "### KNN:"
    ]
   },
   {
@@ -919,7 +926,7 @@
     "id": "mcGcsjXgenPW"
    },
    "source": [
-    "## SVM:"
+    "### SVM:"
    ]
   },
   {
@@ -1020,7 +1027,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## XGBoost:"
+    "### XGBoost:"
    ]
   },
   {
@@ -1136,7 +1143,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## MLP:"
+    "### MLP:"
    ]
   },
   {
@@ -1241,7 +1248,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Decision Tree:"
+    "### Decision Tree:"
    ]
   },
   {
@@ -1330,7 +1337,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Random Forest:"
+    "### Random Forest:"
    ]
   },
   {
@@ -1439,7 +1446,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Summary:\n",
+    "## Results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Summary:\n",
     "The best selection methods for each model:\n",
     "|   | Resilience | Criminality |\n",
     "|---|----------|----------|\n",
@@ -1456,14 +1470,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Results"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Results Plot"
+    "### Results Plot"
    ]
   },
   {
@@ -1587,7 +1594,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Results Analysis"
+    "### Results Analysis"
    ]
   },
   {
@@ -2302,6 +2309,13 @@
     "projected_coeffs = [(col, c) for col,c in zip(X_train_data.columns,linear_res.steps[1][1].coef_ @ linear_res.steps[0][1].components_)]\n",
     "projected_coeffs.sort(key=lambda x:-abs(x[1]))\n",
     "pd.DataFrame(projected_coeffs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Overfitting evaluation:"
    ]
   },
   {
